# quarto-tech-paper

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  Taskfile.yml  check.sh  cookiecutter.json  download-template.sh  index.html  quarto-tech-paper.code-workspace  tasks.py
.github/workflows/: static.yml
examples/: 01-notebook.html  02-notebook.html  index.html
examples/supplementary/: 01-notebook.html  02-notebook.html
hooks/: post_gen_project.py
paper/: .env.example  .gitignore  .gitlab-ci.yml  README.md  Taskfile.yml  biblio.bib  manuscript.md  pixi.toml  pyproject.toml
paper/notebooks/: 01-notebook.ipynb  02-notebook.py  support.py
paper/scripts/: upload-to-gdrive.py
paper/site/: _quarto.yml  index.qmd
paper/src/my_package/: config.py  dataset.py  features.py  myinit.py  plots.py
paper/src/my_package/modeling/: predict.py  train.py
paper/tests/: conftest.py  dev.py  test-dummy.py
{{ cookiecutter.repo_name }}/: .env  tasks.py
{{ cookiecutter.repo_name }}/notebooks/: 01-notebook.ipynb  support.py
{{ cookiecutter.repo_name }}/optional/: .gitignore
{{ cookiecutter.repo_name }}/reports/: paper.md
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/: __init__.py  dataset.py  features.py  plots.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/modeling/: predict.py  train.py
{{ cookiecutter.repo_name }}/tests/: dev.py
{{cookiecutter.directory}}/: .envrc  .gitignore  AGENTS.md  README.md  Taskfile.yml  pyproject.toml  settings.yml  tasks.py
{{cookiecutter.directory}}/notebooks/: 01-notebook.ipynb  support.py
{{cookiecutter.directory}}/optional/: .gitlab-ci.yml
{{cookiecutter.directory}}/site/: _quarto.yml  index.qmd
{{cookiecutter.directory}}/src/my_package/: __init__.py  config.py
{{cookiecutter.directory}}/src/{{cookiecutter.package}}/: __init__.py  config.py  dataset.py  features.py  myinit.py  plots.py
{{cookiecutter.directory}}/src/{{cookiecutter.package}}/modeling/: predict.py  train.py
{{cookiecutter.directory}}/tests/: conftest.py  dev.py  test-dummy.py  tests.py
{{cookiecutter.repo_name}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.repo_name}}/notebooks/: 01-notebook.ipynb
{{cookiecutter.repo_name}}/optional/: .gitattributes  .gitlab-ci.yml
{{cookiecutter.repo_name}}/reports/: biblio.bib
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  config.py  dataset.py  features.py  plots.py  pytest.ini
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/modeling/: predict.py  train.py
{{cookiecutter.repo_name}}/tests/: tests.py
