[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
description = "A local package for my Quarto tech paper project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [] # You can leave this empty since Pixi manages your main dependencies