[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.0.1"
description = "TBD"
authors = [
  { name = "TBD" },
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "forallpeople>=2.7.0",
    "holoviews>=1.19.1",
    "hvplot>=0.11.0",
    "icecream>=2.1.3",
    "loguru>=0.7.3",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pydantic-settings>=2.0.0",
    "pyprojroot>=0.3.0",
    "pytest>=8.4.2",
    "python-box>=7.2.0",
    "seaborn>=0.13.2",
    "sigfig>=1.3.3",
    "sitepath>=0.4.0",
    "summarytools>=0.3.0",
    "typer>=0.16.1",
    "watermark>=2.5.0", 
]

[project.optional-dependencies]
dev = [
 "jupyterlab>=4.2.5",
  "jupytext>=1.16.4",
  "marimo>=0.20.4",
  "notebook>=7.2.2",
  "ipykernel>=7.2.0",
]



[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter="-all"

[tool.pytest.ini_options]
addopts = "--disable-warnings"
testpaths = ["tests/"]
python_files = ["test_*.py", "test-*.py"]
norecursedirs = [".git", ".venv", "src"]
log_cli = true
log_cli_level = "INFO"

[project.scripts]
plots = "my_package.plots:app"